Fix layout issues

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -4,6 +4,7 @@
     margin: 0 auto;
     width: 50%;
     font-size: 0.8rem;
+    padding: 1rem 0;
 
     &__section {
         display: flex;
