--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,8 +1,6 @@
 @import '../../scss/globals';
 
 .header {
-  max-height: 50px;
-
   &__section {
     display: flex;
     align-items: center;
