--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -2,7 +2,7 @@
 @import 'globals/index';
 
 $feature-flags: (
-  grid-columns-16: true,
+  grid-columns-16: true
 );
 
 // import carbon/styles grid
@@ -12,7 +12,6 @@ html {
   height: 100%;
 }
 
-
 body {
   font-family: $font-family;
   font-size: $font-size;
@@ -20,5 +19,15 @@ body {
   line-height: 1.5;
   background-color: $black-00;
   color: $white-00;
-  min-height: 100%;
+  height: 100%;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+
+  main {
+    flex: 2;
+  }
 }
